# genxdata

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  config.yaml  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  poetry.lock.bkp  pyproject.toml  readme.md  report.report  requirements.txt  sitemap.xml
.cursor/rules/: cli-commands.mdc  configuration-format.mdc  error-handling.mdc  project-architecture.mdc  strategy-development.mdc  testing-workflow.mdc
cli/: __init__.py  main_cli.py
configs/: GENERATOR_SETTINGS.py  __init__.py
core/: __init__.py  base_strategy.py  domain_mixins.py  mixins.py  orchestrator.py  strategy_config.py  strategy_factory.py  strategy_mapping.py
core/error/: __init__.py  error_context.py
core/processors/: __init__.py  base_config_processor.py  normal_config_processor.py  streaming_config_processor.py
core/strategies/: __init__.py  concat_strategy.py  date_series_strategy.py  delete_strategy.py  distributed_choice_strategy.py  distributed_date_range_strategy.py  distributed_number_range_strategy.py  distributed_time_range_strategy.py  mapping_strategy.py  pattern_strategy.py  random_date_range_strategy.py  random_name_strategy.py  random_number_range_strategy.py  replacement_strategy.py  series_strategy.py  time_range_strategy.py  uuid_strategy.py
core/writers/: __init__.py  base_file_writer.py  base_writer.py  batch_writer.py  csv_file_writer.py  excel_file_writer.py  feather_file_writer.py  file_writer_factory.py  (+6 more)
docs/: index.md
examples/: README.md
exceptions/: __init__.py  base_exception.py  batch_processing_exception.py  config_exception.py  error_messages.py  invalid_config_format_exception.py  invalid_config_path_exception.py  invalid_running_mode_exception.py  param_exceptions.py  strategy_exceptions.py  streaming_exception.py
frontend/: DEPLOYMENT.md  package.json  vite.config.ts
generators/: business_generators.json  ecommerce_generators.json  education_generators.json  generic_generator.json  geographic_generators.json  healthcare_generators.json  iot_sensors_generators.json  readme.md  technology_generators.json  transportation_generators.json
messaging/: __init__.py  amqp_config.py  amqp_consumer.py  amqp_producer.py  base.py  factory.py  kafka_config.py  kafka_producer.py
output/: education_config.json  education_config.yaml  generated_data.json  healthcare_config.json  healthcare_config.yaml  iot_sensors_config.json  iot_sensors_config.yaml  transportation_config.json  transportation_config.yaml
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: test_base_file_writer_paths.py  test_base_strategy_helpers.py  test_cli_flags.py  test_cli_perf_report.py  test_cli_stream.py  test_file_writer_factory.py  test_generators_end_to_end.py  test_intermediate_columns.py  test_mask_number_range_strategy.py  test_performance_timer.py  test_processors_end_to_end.py  test_stream_writer_integration.py  test_stream_writer_validation.py  test_streaming_continuity.py  test_streaming_processor.py  test_uniqueness_normal_mode.py  test_writers_misc.py  test_writers_roundtrip.py
tools/: README.md  analysis-requirements.txt  check_artemis_console.py  check_queue_roundtrip.py  data_analyzer.py  run_perf_benchmark.py  verify_queue_messages.py
utils/: __init__.py  args_to_dict.py  date_generator.py  generator_utils.py  get_names.py  intermediate_column.py  json_loader.py  logging.py  performance_timer.py  yaml_loader.py
(+218 files in other folders)
